# external-dns

./: BUILD.bazel
controller/: BUILD.bazel
endpoint/: BUILD.bazel
internal/testutils/: BUILD.bazel
nesting/: go.mod  go.sum
nesting/cmd/manager/: BUILD.bazel  main.go
nesting/pkg/apis/: BUILD.bazel
nesting/pkg/controller/: BUILD.bazel  add_dnsendpoint.go  add_pod.go
nesting/pkg/controller/dnsendpoint/: BUILD.bazel  dnsendpoint_controller.go  dnsendpoint_controller_suite_test.go  dnsendpoint_controller_test.go
nesting/pkg/controller/pod/: BUILD.bazel  pod_controller.go  pod_controller_suite_test.go  pod_controller_test.go
nesting/pkg/kops/: BUILD.bazel  annotations.go
nesting/pkg/webhook/: BUILD.bazel
pkg/apis/externaldns/: BUILD.bazel
pkg/apis/externaldns/validation/: BUILD.bazel
plan/: BUILD.bazel
provider/: BUILD.bazel
registry/: BUILD.bazel
source/: BUILD.bazel
