load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "alibaba_cloud.go",
        "aws.go",
        "aws_sd.go",
        "azure.go",
        "cloudflare.go",
        "coredns.go",
        "designate.go",
        "digital_ocean.go",
        "dnsimple.go",
        "domain_filter.go",
        "dyn.go",
        "exoscale.go",
        "google.go",
        "infoblox.go",
        "inmemory.go",
        "linode.go",
        "oci.go",
        "pdns.go",
        "provider.go",
        "recordfilter.go",
        "rfc2136.go",
        "zone_id_filter.go",
        "zone_tag_filter.go",
        "zone_type_filter.go",
        "zonefinder.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/provider",
    visibility = ["//visibility:public"],
    deps = [
        "//endpoint:go_default_library",
        "//pkg/apis/externaldns:go_default_library",
        "//pkg/tlsutils:go_default_library",
        "//plan:go_default_library",
        "//vendor/cloud.google.com/go/compute/metadata:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/arm/dns:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/adal:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/sdk/requests:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/services/alidns:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/services/pvtz:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials/stscreds:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/request:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/route53:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/servicediscovery:go_default_library",
        "//vendor/github.com/cloudflare/cloudflare-go:go_default_library",
        "//vendor/github.com/coreos/etcd/clientv3:go_default_library",
        "//vendor/github.com/denverdino/aliyungo/metadata:go_default_library",
        "//vendor/github.com/digitalocean/godo:go_default_library",
        "//vendor/github.com/digitalocean/godo/context:go_default_library",
        "//vendor/github.com/dnsimple/dnsimple-go/dnsimple:go_default_library",
        "//vendor/github.com/exoscale/egoscale:go_default_library",
        "//vendor/github.com/ffledgling/pdns-go:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/openstack:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/openstack/dns/v2/recordsets:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/openstack/dns/v2/zones:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/pagination:go_default_library",
        "//vendor/github.com/infobloxopen/infoblox-go-client:go_default_library",
        "//vendor/github.com/linki/instrumented_http:go_default_library",
        "//vendor/github.com/linode/linodego:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/nesv/go-dynect/dynect:go_default_library",
        "//vendor/github.com/oracle/oci-go-sdk/common:go_default_library",
        "//vendor/github.com/oracle/oci-go-sdk/dns:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/dns/v1:go_default_library",
        "//vendor/google.golang.org/api/googleapi:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "alibaba_cloud_test.go",
        "aws_sd_test.go",
        "aws_test.go",
        "azure_test.go",
        "cloudflare_test.go",
        "coredns_test.go",
        "designate_test.go",
        "digital_ocean_test.go",
        "dnsimple_test.go",
        "domain_filter_test.go",
        "dyn_test.go",
        "exoscale_test.go",
        "google_test.go",
        "infoblox_test.go",
        "inmemory_test.go",
        "linode_test.go",
        "oci_test.go",
        "pdns_test.go",
        "provider_test.go",
        "recordfilter_test.go",
        "rfc2136_test.go",
        "zone_id_filter_test.go",
        "zone_tag_filter_test.go",
        "zone_type_filter_test.go",
        "zonefinder_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//endpoint:go_default_library",
        "//internal/testutils:go_default_library",
        "//plan:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/arm/dns:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/services/alidns:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/services/pvtz:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/route53:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/servicediscovery:go_default_library",
        "//vendor/github.com/cloudflare/cloudflare-go:go_default_library",
        "//vendor/github.com/digitalocean/godo:go_default_library",
        "//vendor/github.com/digitalocean/godo/context:go_default_library",
        "//vendor/github.com/dnsimple/dnsimple-go/dnsimple:go_default_library",
        "//vendor/github.com/exoscale/egoscale:go_default_library",
        "//vendor/github.com/ffledgling/pdns-go:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/openstack/dns/v2/recordsets:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/openstack/dns/v2/zones:go_default_library",
        "//vendor/github.com/infobloxopen/infoblox-go-client:go_default_library",
        "//vendor/github.com/linode/linodego:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/nesv/go-dynect/dynect:go_default_library",
        "//vendor/github.com/oracle/oci-go-sdk/common:go_default_library",
        "//vendor/github.com/oracle/oci-go-sdk/dns:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/api/dns/v1:go_default_library",
        "//vendor/google.golang.org/api/googleapi:go_default_library",
    ],
)
