load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compatibility.go",
        "connector.go",
        "crd.go",
        "dedup_source.go",
        "fake.go",
        "gateway.go",
        "ingress.go",
        "multi_source.go",
        "service.go",
        "source.go",
        "store.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/source",
    visibility = ["//visibility:public"],
    deps = [
        "//endpoint:go_default_library",
        "//vendor/github.com/linki/instrumented_http:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/istio.io/api/networking/v1alpha3:go_default_library",
        "//vendor/istio.io/istio/pilot/pkg/config/kube/crd:go_default_library",
        "//vendor/istio.io/istio/pilot/pkg/model:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "connector_test.go",
        "crd_test.go",
        "dedup_source_test.go",
        "fake_test.go",
        "gateway_test.go",
        "ingress_test.go",
        "multi_source_test.go",
        "service_test.go",
        "shared_test.go",
        "source_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//endpoint:go_default_library",
        "//internal/testutils:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
        "//vendor/istio.io/api/networking/v1alpha3:go_default_library",
        "//vendor/istio.io/istio/pilot/pkg/model:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/rest/fake:go_default_library",
    ],
)
