load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_dnsendpoint.go",
        "add_pod.go",
        "controller.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/nesting/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//nesting/pkg/controller/dnsendpoint:go_default_library",
        "//nesting/pkg/controller/pod:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
