load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["webhook.go"],
    importpath = "github.com/kubernetes-incubator/external-dns/nesting/pkg/webhook",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library"],
)
